# sponsor-bot

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  start.sh
.github/workflows/: deploy_azure_function.yml  master_sponsorscrape.yml
api/: pyproject.toml  requirements.txt
api/scrape_action/: __init__.py
api/scrape_action/scraper/: email_data_extractor.py  scraper.py
api/search_action/: __init__.py  function.json
backend/: pyproject.toml
backend/app/: __init__.py  admin.py  api.py  auth.py  config.py  dashboard.py  database.py  main.py  models.py  schemas.py  scrape_actions.py  scrape_email_extractor.py  scrape_targets.py  scraper.py  scraping.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/services/: api.js
frontend/src/views/: EmailScrapeDashboard.vue  EmailSendDashboard.vue  SearchScrapeDashboard.vue
scrape_action/: __init__.py  function.json
scrape_action/scraper/: email_data_extractor.py
