[project]
name = "sponsor-bot-backend"
version = "0.1.0"
description = "Sponsor Bot Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "fastapi-users[sqlalchemy]>=12.1.2",
    "SQLAlchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "email-validator>=2.1.0.post1",
    "pydantic-settings",
    "aiosqlite",
    "aiohttp>=3.13.2",
    "requests",
    "beautifulsoup4",
    "ddgs",
    "extract_emails[all] @ git+https://github.com/AdarWa/extract-emails@124640e475a5cd8edefd7443f558edd92c40a0ff",
]
